QA_Ipreo/src/objects/Account.object
<CustomObject>
    <fields>
        <fullName>Migration_Reference__c</fullName>
        <description>for data migration from BDV</description>
        <label>Migration Reference</label>
        <picklist>
            <picklistValues>
                <fullName>Yes</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>No</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>NYSE_Program_Tier__c</fullName>
        <label>NYSE Program Tier</label>
        <picklist>
            <picklistValues>
                <fullName>Tier 1</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Tier 2</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Tier A</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Tier B</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>NYSE_Ticker_Symbol__c</fullName>
        <label>NYSE Ticker Symbol</label>
        <length>40</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>No_of_Active_Assets__c</fullName>
        <defaultValue>0</defaultValue>
        <description>The number of Active Assets is used to determine the Account &quot;Status&quot; value.</description>
        <inlineHelpText>The number of Active Assets is used to determine the Account &quot;Status&quot; value.</inlineHelpText>
        <label>No. of Active Assets</label>
        <precision>4</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>No_of_Active_Sponsored_Assets__c</fullName>
        <label>No. of Active Sponsored Assets</label>
        <summaryFilterItems>
            <field>Sponsored_Asset__c.Active__c</field>
            <operation>equals</operation>
            <value>True</value>
        </summaryFilterItems>
        <summaryForeignKey>Sponsored_Asset__c.Account_Name__c</summaryForeignKey>
        <summaryOperation>count</summaryOperation>
        <type>Summary</type>
    </fields>
    <fields>
        <fullName>No_of_Active_Work_Orders__c</fullName>
        <defaultValue>0</defaultValue>
        <label>No. of Active Work Orders</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>No_of_All_Assets__c</fullName>
        <defaultValue>0</defaultValue>
        <label>No. of All Assets</label>
        <precision>4</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>No_of_All_Work_Orders__c</fullName>
        <defaultValue>0</defaultValue>
        <label>No. of All Work Orders</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>No_of_Open_Opportunities__c</fullName>
        <label>No. of Open Opportunities</label>
        <summaryFilterItems>
            <field>Opportunity.IsClosed</field>
            <operation>notEqual</operation>
            <value>True</value>
        </summaryFilterItems>
        <summaryForeignKey>Opportunity.AccountId</summaryForeignKey>
        <summaryOperation>count</summaryOperation>
        <type>Summary</type>
    </fields>
    <fields>
        <fullName>No_of_Sponsored_Assets__c</fullName>
        <label>No. of Sponsored Assets</label>
        <summaryForeignKey>Sponsored_Asset__c.Account_Name__c</summaryForeignKey>
        <summaryOperation>count</summaryOperation>
        <type>Summary</type>
    </fields>
    <fields>
        <fullName>Number_of_Institutional_Equity_Holders__c</fullName>
        <description>data migration - from Ian file</description>
        <label>Number of Institutional Equity Holders</label>
        <precision>8</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Opportunity_Name__c</fullName>
        <description>Use to show on email template</description>
        <label>Opportunity Name</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Partner_Products_in_Use_GMG__c</fullName>
        <label>Partner Products in Use (GMG)</label>
        <picklist>
            <picklistValues>
                <fullName>Algomi</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Blue Curve</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>BlueMatrix</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>OneAccess (API)</fullName>
            </picklistValues>
            <restrictedPicklist>true</restrictedPicklist>
        </picklist>
        <type>MultiselectPicklist</type>
    </fields>
    <fields>
        <fullName>Price_Date__c</fullName>
        <inlineHelpText>Automatically updated if this Account was created from a converted EDD Lead</inlineHelpText>
        <label>Price Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Primary_Account_Manager__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Primary Account Manager</label>
        <referenceTo>User</referenceTo>
        <relationshipName>Accounts</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Primary_Exchange_Country__c</fullName>
        <description>Data migration - from Ian file</description>
        <label>Primary Exchange Country</label>
        <length>20</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Primary_Exchange__c</fullName>
        <label>Primary Exchange</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Primary_Sales_Rep__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Primary Sales Rep</label>
        <referenceTo>User</referenceTo>
        <relationshipName>Accounts3</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Primary_Use__c</fullName>
        <description>for data migration from BDV</description>
        <label>Primary Use</label>
        <picklist>
            <picklistValues>
                <fullName>CRM</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Ownership</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Reporting</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Mail</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Targeting</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Look up Tool</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Tracking</fullName>
            </picklistValues>
        </picklist>
        <type>MultiselectPicklist</type>
    </fields>
    <fields>
        <fullName>Prior_System__c</fullName>
        <description>for data migration from BDV</description>
        <label>Prior System</label>
        <picklist>
            <picklistValues>
                <fullName>SalesForce</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>IPO</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>NASDAQ - FSWS</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>NASDAQ - Insight</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>IR Soft</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Zacks</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Thomson 1 (Thomson)</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Richard Davies IR (RD:IR)</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Excel (Internal System)</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Pinpoint (Nasdaq)</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>No Prior System</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>IR Navigator (Ilios)</fullName>
            </picklistValues>
        </picklist>
        <type>MultiselectPicklist</type>
    </fields>
    <fields>
        <fullName>Product_Bundle__c</fullName>
        <label>Product Bundle</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>RAG_Status_Summary_Description_Date__c</fullName>
        <label>RAG Status Summary Description Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>RAG_Status_Summary_Description__c</fullName>
        <label>RAG Status Summary Description</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>RAG_Status_Summary__c</fullName>
        <label>RAG Status Summary</label>
        <picklist>
            <picklistValues>
                <fullName>Red</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Red-Amber</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Red-Amber-Green</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Red-Green</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Amber</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Amber-Green</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Green</fullName>
            </picklistValues>
            <restrictedPicklist>true</restrictedPicklist>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Reason_for_Cancellation__c</fullName>
        <description>for data migration from BDV</description>
        <label>Reason for Cancellation</label>
        <picklist>
            <picklistValues>
                <fullName>Not Using</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Competitive Loss</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Product Overlap</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Lower Pricing</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Product Dissatisfaction</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Budget/Downsize</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>BSIQ</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Closed Business</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>M&amp;A</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Legal</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Bankruptcy</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>BONY Client</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Delisted</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Bundled</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>GMI</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>BD Corporate</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>N/A</fullName>
            </picklistValues>
        </picklist>
        <type>MultiselectPicklist</type>
    </fields>
    <fields>
        <fullName>Region__c</fullName>
        <label>Region</label>
        <picklist>
            <picklistValues>
                <fullName>North America</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>C. America/Caribbean</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>South America</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Europe</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Middle East</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Africa</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Asia</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Pacific</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Sales_Rep_Email__c</fullName>
        <description>use to show on email template, copy from work order while order&apos;s status was changed to closed.</description>
        <label>Sales Rep Email</label>
        <type>Email</type>
    </fields>
    <fields>
        <fullName>Secondary_Account_Manager__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Secondary Account Manager</label>
        <referenceTo>User</referenceTo>
        <relationshipName>Accounts1</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Secondary_Exchange__c</fullName>
        <label>Secondary Exchange</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Secondary_Sales_Rep__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Secondary Sales Rep</label>
        <referenceTo>User</referenceTo>
        <relationshipName>Accounts2</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Security_Type__c</fullName>
        <description>Data migration - from Ian file</description>
        <label>Security Type</label>
        <length>20</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Shares_Outstanding_mm__c</fullName>
        <description>Data migration - from Ian file</description>
        <label>Shares Outstanding (mm)</label>
        <precision>10</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Sponsored_Issuer_Status__c</fullName>
        <label>Sponsored Issuer Status</label>
        <picklist>
            <picklistValues>
                <fullName>BNY DR Insight</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Capita</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Citi T1(CRM)</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Citi T2</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Deutsche DR</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Direct</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>JPM Cazenove- CBS Direct</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>JPM DR</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Market Eye</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>NRI/Takara</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Wonderful Sky- BDC</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Wonderful Sky- BSIQ</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Status_Date__c</fullName>
        <inlineHelpText>Automatically updated if this Account was created from a converted EDD Lead</inlineHelpText>
        <label>Status Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Status__c</fullName>
        <inlineHelpText>Prospect: no current or previous products
Customer: has data or software with active term or project with completion date in past 12 months or future estimated completion date
Former Customer: had data or software but term exp or had proj over 12 mo ago</inlineHelpText>
        <label>Status</label>
        <picklist>
            <picklistValues>
                <fullName>Client</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Former Client</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Prospect</fullName>
                <default>true</default>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Sum_ACV_of_Open_New_Business__c</fullName>
        <label>Sum (ACV) of Open New Business</label>
        <summarizedField>Opportunity.ACV__c</summarizedField>
        <summaryFilterItems>
            <field>Opportunity.IsClosed</field>
            <operation>notEqual</operation>
            <value>True</value>
        </summaryFilterItems>
        <summaryFilterItems>
            <field>Opportunity.RecordTypeId</field>
            <operation>equals</operation>
            <value>New Business</value>
        </summaryFilterItems>
        <summaryForeignKey>Opportunity.AccountId</summaryForeignKey>
        <summaryOperation>sum</summaryOperation>
        <type>Summary</type>
    </fields>
    <fields>
        <fullName>Sum_ACV_of_Open_Opportunities__c</fullName>
        <label>Sum (ACV) of Open Opportunities</label>
        <summarizedField>Opportunity.ACV__c</summarizedField>
        <summaryFilterItems>
            <field>Opportunity.IsClosed</field>
            <operation>notEqual</operation>
            <value>True</value>
        </summaryFilterItems>
        <summaryForeignKey>Opportunity.AccountId</summaryForeignKey>
        <summaryOperation>sum</summaryOperation>
        <type>Summary</type>
    </fields>
    <fields>
        <fullName>Sum_ACV_of_Open_Renewal_Current_Year__c</fullName>
        <description>Sum of Open Renewals with Closed Date in current year</description>
        <label>Sum (ACV) of Open Renewals Current Year</label>
        <summarizedField>Opportunity.Prior_Year_ACV__c</summarizedField>
        <summaryFilterItems>
            <field>Opportunity.Is_Close_Date_In_Current_Year__c</field>
            <operation>equals</operation>
            <value>Yes</value>
        </summaryFilterItems>
        <summaryFilterItems>
            <field>Opportunity.IsClosed</field>
            <operation>equals</operation>
            <value>False</value>
        </summaryFilterItems>
        <summaryFilterItems>
            <field>Opportunity.RecordTypeId</field>
            <operation>equals</operation>
            <value>Renewal</value>
        </summaryFilterItems>
        <summaryForeignKey>Opportunity.AccountId</summaryForeignKey>
        <summaryOperation>sum</summaryOperation>
        <type>Summary</type>
    </fields>
    <fields>
        <fullName>Sum_ACV_of_Open_Renewals__c</fullName>
        <label>Sum (ACV) of Open Renewals</label>
        <summarizedField>Opportunity.ACV__c</summarizedField>
        <summaryFilterItems>
            <field>Opportunity.IsClosed</field>
            <operation>notEqual</operation>
            <value>True</value>
        </summaryFilterItems>
        <summaryFilterItems>
            <field>Opportunity.RecordTypeId</field>
            <operation>equals</operation>
            <value>Renewal</value>
        </summaryFilterItems>
        <summaryForeignKey>Opportunity.AccountId</summaryForeignKey>
        <summaryOperation>sum</summaryOperation>
        <type>Summary</type>
    </fields>
    <fields>
        <fullName>TSX_Tier__c</fullName>
        <label>TSX Tier</label>
        <picklist>
            <picklistValues>
                <fullName>Tier 1</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Tier 2</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Venture</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Testimonial_Date__c</fullName>
        <label>Testimonial Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Testimonial__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Testimonial</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Tier__c</fullName>
        <description>GMG Client Tier</description>
        <label>GMG Client Tier</label>
        <picklist>
            <picklistValues>
                <fullName>Tier 1</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Tier 2</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Tier 3</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Other</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Total_Business_Supported_CY__c</fullName>
        <formula>Sum_ACV_of_Open_Renewal_Current_Year__c +  Closed_Won_Verifed_Sales_Year_To_Date__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Total Business Supported (CY)</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Tracking_Number__c</fullName>
        <description>This field use to track work order status, it will increase when work order&apos;s status was change to closed.</description>
        <label>Tracking Number</label>
        <length>20</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Vertical__c</fullName>
        <label>Vertical</label>
        <picklist>
            <picklistValues>
                <fullName>Buyside</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Sellside</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Corporate</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Other</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Withdrawn_Postponed_Date__c</fullName>
        <inlineHelpText>Automatically updated if this Account was created from a converted EDD Lead</inlineHelpText>
        <label>Withdrawn/Postponed Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Wonderful_Sky_Restricted__c</fullName>
        <description>for data migration from BDV</description>
        <label>Wonderful Sky Restricted</label>
        <picklist>
            <picklistValues>
                <fullName>Yes</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>No</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Work_Order_Detail_Link__c</fullName>
        <description>use to show on email template, copy from work order while order&apos;s status was changed to closed.</description>
        <label>Work Order Detail Link</label>
        <length>250</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Work_Order_Name__c</fullName>
        <description>use to show on email template, copy from work order while order&apos;s status was changed to closed.</description>
        <label>Work Order Name</label>
        <length>250</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Work_Order_Number__c</fullName>
        <description>use to show on email template, copy from work order while order&apos;s status was changed to closed.</description>
        <label>Work Order Number</label>
        <length>20</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Work_Order_Status__c</fullName>
        <label>Work Order Status</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Workday_ID__c</fullName>
        <description>Identifier from Workday</description>
        <externalId>true</externalId>
        <label>Workday ID</label>
        <length>30</length>
        <type>Text</type>
        <unique>true</unique>
    </fields>
    <fields>
        <fullName>of_Institutional_Ownership__c</fullName>
        <description>data migration - from Ian file</description>
        <label>% of Institutional Ownership</label>
        <precision>10</precision>
        <scale>2</scale>
        <type>Percent</type>
    </fields>
    <listViews>
        <fullName>AllAccountsWAcctNumbers</fullName>
        <columns>ACCOUNT.NAME</columns>
        <columns>Account_ID__c</columns>
        <columns>Vertical__c</columns>
        <columns>Status__c</columns>
        <columns>ACCOUNT.ADDRESS1_CITY</columns>
        <columns>ACCOUNT.ADDRESS1_COUNTRY</columns>
        <columns>ACCOUNT.INDUSTRY</columns>
        <filterScope>Everything</filterScope>
        <label>All Accounts w Acct Numbers</label>
    </listViews>
    <listViews>
        <fullName>Corp_AllAccounts</fullName>
        <columns>ACCOUNT.NAME</columns>
        <columns>Market_Cap__c</columns>
        <columns>ACCOUNT.INDUSTRY</columns>
        <columns>Vertical__c</columns>
        <columns>Status__c</columns>
        <columns>ACCOUNT.ADDRESS1_COUNTRY</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>Vertical__c</field>
            <operation>equals</operation>
            <value>Corporate</value>
        </filters>
        <label>Corp - All Accounts</label>
    </listViews>
    <listViews>
        <fullName>Corp_AllAccounts_Clients</fullName>
        <columns>ACCOUNT.NAME</columns>
        <columns>NYSE_Program_Tier__c</columns>
        <columns>ACCOUNT.INDUSTRY</columns>
        <columns>Vertical__c</columns>
        <columns>Status__c</columns>
        <columns>ACCOUNT.ADDRESS1_COUNTRY</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>Vertical__c</field>
            <operation>equals</operation>
            <value>Corporate</value>
        </filters>
        <filters>
            <field>Status__c</field>
            <operation>equals</operation>
            <value>Client</value>
        </filters>
        <label>Corp - All Accounts - Clients</label>
    </listViews>
    <listViews>
        <fullName>Corp_AllAccounts_FormerClients</fullName>
        <columns>ACCOUNT.NAME</columns>
        <columns>ACCOUNT.INDUSTRY</columns>
        <columns>Vertical__c</columns>
        <columns>Status__c</columns>
        <columns>ACCOUNT.ADDRESS1_COUNTRY</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>Vertical__c</field>
            <operation>equals</operation>
            <value>Corporate</value>
        </filters>
        <filters>
            <field>Status__c</field>
            <operation>equals</operation>
            <value>Former Client</value>
        </filters>
        <label>Corp - All Accounts - Former Clients</label>
    </listViews>
    <listViews>
        <fullName>Corp_AllAccounts_Prospects</fullName>
        <columns>ACCOUNT.NAME</columns>
        <columns>ACCOUNT.INDUSTRY</columns>
        <columns>Vertical__c</columns>
        <columns>Status__c</columns>
        <columns>ACCOUNT.ADDRESS1_COUNTRY</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>Vertical__c</field>
            <operation>equals</operation>
            <value>Corporate</value>
        </filters>
        <filters>
            <field>Status__c</field>
            <operation>equals</operation>
            <value>Prospect</value>
        </filters>
        <label>Corp - All Accounts - Prospects</label>
    </listViews>
    <listViews>
        <fullName>DD_AllAccounts</fullName>
        <columns>ACCOUNT.NAME</columns>
        <columns>Debtdomain_ID__c</columns>
        <columns>ACCOUNT.INDUSTRY</columns>
        <columns>Vertical__c</columns>
        <columns>Status__c</columns>
        <columns>ACCOUNT.ADDRESS1_COUNTRY</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>Debtdomain_ID__c</field>
            <operation>notEqual</operation>
        </filters>
        <label>Accounts with Debtdomain ID</label>
    </listViews>
    <listViews>
        <fullName>Data_Quality_Issue_Missing_FinanceID</fullName>
        <booleanFilter>1 AND (2 OR 3)</booleanFilter>
        <columns>ACCOUNT.NAME</columns>
        <columns>Finance_Account_ID__c</columns>
        <columns>Vertical__c</columns>
        <columns>ACCOUNT.ADDRESS1_CITY</columns>
        <columns>ACCOUNT.ADDRESS1_STATE</columns>
        <columns>ACCOUNT.ADDRESS1_COUNTRY</columns>
        <columns>Status__c</columns>
        <columns>No_of_Open_Opportunities__c</columns>
        <columns>No_of_Active_Assets__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>Finance_Account_ID__c</field>
            <operation>equals</operation>
        </filters>
        <filters>
            <field>Status__c</field>
            <operation>equals</operation>
            <value>Client</value>
        </filters>
        <filters>
            <field>Status__c</field>
            <operation>equals</operation>
            <value>Former Client</value>
        </filters>
        <label>Data Quality Issue - Missing Finance ID</label>
        <sharedTo>
            <group>SFDC_Admin_Team</group>
            <group>Sales_Ops</group>
        </sharedTo>
    </listViews>
    <listViews>
        <fullName>Data_Quality_Issue_Missing_Verticals</fullName>
        <booleanFilter>1 AND (2 OR 3)</booleanFilter>
        <columns>ACCOUNT.NAME</columns>
        <columns>Vertical__c</columns>
        <columns>ACCOUNT.ADDRESS1_CITY</columns>
        <columns>ACCOUNT.ADDRESS1_STATE</columns>
        <columns>ACCOUNT.ADDRESS1_COUNTRY</columns>
        <columns>Status__c</columns>
        <columns>No_of_Open_Opportunities__c</columns>
        <columns>No_of_Active_Assets__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>Vertical__c</field>
            <operation>equals</operation>
        </filters>
        <filters>
            <field>Status__c</field>
            <operation>equals</operation>
            <value>Client</value>
        </filters>
        <filters>
            <field>Status__c</field>
            <operation>equals</operation>
            <value>Former Client</value>
        </filters>
        <label>Data Quality Issue - Missing Verticals</label>
        <sharedTo>
            <group>SFDC_Admin_Team</group>
            <group>Sales_Ops</group>
        </sharedTo>
    </listViews>
    <listViews>
        <fullName>GMG_AllAccounts</fullName>
        <columns>ACCOUNT.NAME</columns>
        <columns>ACCOUNT.INDUSTRY</columns>
        <columns>Vertical__c</columns>
        <columns>Status__c</columns>
        <columns>ACCOUNT.ADDRESS1_COUNTRY</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>Vertical__c</field>
            <operation>equals</operation>
            <value>Buyside,Sellside,Other</value>
        </filters>
        <label>GMG - All Accounts</label>
    </listViews>
    <listViews>
        <fullName>GMG_AllAccounts_Clients</fullName>
        <columns>ACCOUNT.NAME</columns>
        <columns>ACCOUNT.INDUSTRY</columns>
        <columns>Vertical__c</columns>
        <columns>Status__c</columns>
        <columns>ACCOUNT.ADDRESS1_COUNTRY</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>Vertical__c</field>
            <operation>equals</operation>
            <value>Buyside,Sellside,Other</value>
        </filters>
        <filters>
            <field>Status__c</field>
            <operation>equals</operation>
            <value>Client</value>
        </filters>
        <label>GMG - All Accounts - Clients</label>
    </listViews>
    <listViews>
        <fullName>GMG_AllAccounts_FormerClients</fullName>
        <columns>ACCOUNT.NAME</columns>
        <columns>ACCOUNT.INDUSTRY</columns>
        <columns>Vertical__c</columns>
        <columns>Status__c</columns>
        <columns>ACCOUNT.ADDRESS1_COUNTRY</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>Vertical__c</field>
            <operation>equals</operation>
            <value>Buyside,Sellside,Other</value>
        </filters>
        <filters>
            <field>Status__c</field>
            <operation>equals</operation>
            <value>Former Client</value>
        </filters>
        <label>GMG - All Accounts - Former Clients</label>
    </listViews>
    <listViews>
        <fullName>GMG_AllAccounts_Prospects</fullName>
        <columns>ACCOUNT.NAME</columns>
        <columns>ACCOUNT.INDUSTRY</columns>
        <columns>Vertical__c</columns>
        <columns>Status__c</columns>
        <columns>ACCOUNT.ADDRESS1_COUNTRY</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>Vertical__c</field>
            <operation>equals</operation>
            <value>Buyside,Sellside,Other</value>
        </filters>
        <filters>
            <field>Status__c</field>
            <operation>equals</operation>
            <value>Prospect</value>
        </filters>
        <label>GMG - All Accounts - Prospects</label>
    </listViews>
    <listViews>
        <fullName>My_Account_Teams_Status_Client</fullName>
        <columns>ACCOUNT.NAME</columns>
        <columns>Status__c</columns>
        <columns>Vertical__c</columns>
        <columns>ACCOUNT.ADDRESS1_STATE</columns>
        <columns>ACCOUNT.ADDRESS1_COUNTRY</columns>
        <columns>RAG_Status_Summary__c</columns>
        <columns>ACCOUNT.LAST_ACTIVITY</columns>
        <columns>ACCOUNT.LAST_UPDATE</columns>
        <columns>UPDATEDBY_USER.ALIAS</columns>
        <filterScope>Team</filterScope>
        <filters>
            <field>Status__c</field>
            <operation>equals</operation>
            <value>Client</value>
        </filters>
        <label>My Account Teams - Status Client</label>
    </listViews>
</CustomObject>